tests/__snapshots__/feature-watch-failFast-option-stderr.snap.txt
Error: Type 'string' is not the same as type 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  4 | });
  5 | 

      at ./a-feature/__typetests__/isNumber.test.ts:3:30 ❭ is number?

Error: Type 'string' is not the same as type 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<string>().type.toBe<number>();
    |                              ~~~~~~
  4 | });
  5 | 

      at ./a-feature/__typetests__/isNumber.test.ts:3:30 ❭ is number?

